--- a/src/app/module/about-us/about-us.component.html
+++ b/src/app/module/about-us/about-us.component.html
@@ -17,9 +17,9 @@
         <div class="row bgimg">
             <div class="col-12 text-center">
                 <img src="assets/img/teladent.png"  class="tela" alt="Teladent">
-                <p class="p_intro">India’s first teledentistry platform that provides virtual advice and expert opinion for all your dental problems. Our
+                <p class="p_intro stbs">India’s first teledentistry platform that provides virtual advice and expert opinion for all your dental problems. Our
                 online consultation can help you gain a clearer idea of what your dental issues are, and what treatment may be right for
-                you, from the team of highly qualified certified dentist at anytime from anywhere.</p>
+                you, from the team of a highly qualified certified dentist at anytime from anywhere.Tela health is not a specific service, but a collection of means to enhance care.</p>
 
             </div>
         </div>
@@ -35,7 +35,7 @@
                     <div class="col-lg-5 col-md-6">
                         <h2 class=" p40 ">What is Teledentistry?</h2>
                        
-                        <p>Teledentistry refers to the use of telehealth systems and methodologies in dentistry. Telehealth refers to a broad
+                        <p class="tela-text stbs">Teledentistry refers to the use of telehealth systems and methodologies in dentistry. Telehealth refers to a broad
                         variety of technologies and tactics to deliver virtual medical, health, and education services.</p>
                      </div>
                     
@@ -59,10 +59,10 @@
                             </div>
                             <div class="col-sm-8 teamp1">
                                 <p><b>Dr. Pearl Jaggi (B.D.S. & M.D.S.)</b></p>
-                                <p>Pediatric & Preventive Dentist, Patient Relationship Manager</p>
+                                <p class="stbs">Pediatric & Preventive Dentist, Patient Relationship Manager</p>
                             </div>
                             <div class="col-sm-12 teamp2">
-                                <p>We us personalized interactions with
+                                <p class="stbs">We us personalized interactions with
                                 highly qualified registered professionals to deliver the best preventive oral care and drive better
                                 oral health outcomes</p>
                             </div>
@@ -77,10 +77,10 @@
                             </div>
                             <div class="col-sm-8 teamp1">
                                 <p><b>Dr. Pearl Jaggi (B.D.S. & M.D.S.)</b></p>
-                                <p>Pediatric & Preventive Dentist, Patient Relationship Manager</p>
+                                <p class="stbs">Pediatric & Preventive Dentist, Patient Relationship Manager</p>
                             </div>
                             <div class="col-sm-12 teamp2">
-                                <p>We us personalized interactions with
+                                <p class="stbs">We us personalized interactions with
                                     highly qualified registered professionals to deliver the best preventive oral care and drive better
                                     oral health outcomes</p>
                             </div>
@@ -99,7 +99,7 @@
             <div class="fluid-container">
                 <div class="row">
                     <div class="col-sm-4 col-xs-12 whysection">
-                        <h2 class="section-title pb cw"> Why Teladent </h2>
+                        <h2 class="section-title pb cw"> Why Teladent </h2><br>
                         <p>Our mission is to provide all our clients with various types of dental services, qualified assistance and effective
                         treatment. We work for your oral health, beautiful smiles and well-being. Teladent provides and empowers virtual oral
                         care services, to every individual’s health journey. It helps you with improved access to oral healthcare, and improve
@@ -109,7 +109,7 @@
                         <div class="row text-center ppprow">
                             <div class="col-sm-3 iconr">
                                 <img src="assets/img/about/undraw_devices_re_dxae.png">
-                                <p class="icontext">Complete Virtual Oral Care</p>
+                                <p class="icontext stbs">Complete Virtual Oral Care</p>
                             </div>
 
                             <div class="col-sm-3 iconr">
@@ -119,8 +119,7 @@
 
                             <div class="col-sm-3 iconr">
                                 <img src="assets/img/about/guarantee.png">
-                                <p class="icontext">Certified clinics
-                                near you</p>
+                                <p class="icontext">Certified Clinics near you</p>
                             </div>
 
                             <div class="col-sm-3 iconr">
@@ -144,8 +143,7 @@
                         
                             <div class="col-sm-3 iconr">
                                 <img src="assets/img/about/wallet.png">
-                                <p class="icontext">Easy and affordable financing options
-                                    near you</p>
+                                <p class="icontext">Easy financing options</p>
                             </div>
                         
                             <div class="col-sm-3 iconr">
@@ -168,7 +166,7 @@
                 <div class="container text-center">
                     <div class="row justify-content-center">
                         <h2 class="section-title"> How it Works </h2>
-                        <p class="subppp">We us personalized interactions with highly qualified registered professionals to deliver the best preventive oral care
+                        <p class="subppp stbs">We use personalized interactions with highly qualified registered professionals to deliver the best preventive oral care
                         and drive better oral health outcomes.</p>
                     </div>
                     <div class="row justify-content-center pr">
@@ -178,7 +176,7 @@
                         
                         <div class="col-sm-3 howicon">
                             <img src="assets/img/about/book.png">
-                            <p class="iconp">Book appointment with specialised doctors</p>
+                            <p class="iconp">Book an appointment with specialised doctors</p>
                         </div>
 
                         <div class="col-sm-3 howicon">
@@ -206,7 +204,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-10 d-flex flex-column align-items-center">
                         <h2>Get a Free Consultation</h2>
-                        <p class="gc">Let our team handle all your dental healthcare issues.
+                        <p class="gc stbs">Let our team handle all your dental healthcare issues.
                         Call now to get a free consultation from our expert advisors on below numbers.</p>
                         
                         <a class="wow  text-xxl font-weight-bold" href="tel:#">
