--- a/src/app/module/contact-us/contact-us.component.html
+++ b/src/app/module/contact-us/contact-us.component.html
@@ -36,7 +36,7 @@
                             <i class="fa fa-envelope fa-3"></i>
                         </div>
                         <div class="c-info">
-                            <h4>email</h4>
+                            <h4>Email</h4>
                             <p> teladentist@gmail.com</p>
                         </div>
                     </div>
