--- a/src/app/module/doctor-profile/doctor-profile.component.html
+++ b/src/app/module/doctor-profile/doctor-profile.component.html
@@ -118,7 +118,7 @@
                                         <!-- About Details -->
                                         <div class="widget about-widget">
                                             <h4 class="widget-title">About Me</h4>
-                                            <p>{{doctorDetail?.about}}</p>
+                                            <p class="stbs">{{doctorDetail?.about}}</p>
                                         </div>
                                         <!-- /About Details -->
                                     
