--- a/src/app/module/index/index.component.html
+++ b/src/app/module/index/index.component.html
@@ -9,12 +9,12 @@
                     <div class="row align-items-center">
                         <div class="col-md-12 col-xl-12  text-sm-left pt">
                             <h1 class="fw">Dentistry Anytime , Anywhere</h1>
-                            <p>Providing the highest standard in dental care</p>
+                            <p class="stbs">Providing the highest standard in dental care</p>
 
                             <div class="icontext">
-                                <p><img src="../../../assets/img/home/undraw_devices_re_dxae.png"><span class="tt">Complete Virtual Oral Care</span></p>
-                                <p><img src="../../../assets/img/home/group_23.png"><span class="tt">&nbsp;&nbsp;    Access to Specialised Dentists</span></p>
-                                <p><img src="../../../assets/img/home/safe.png"><span class="tt">&nbsp;&nbsp;    Highest Safety measures</span></p>
+                                <p class="stbs"><img src="../../../assets/img/home/undraw_devices_re_dxae.png"><span class="tt">Complete Virtual Oral Care</span></p>
+                                <p class="stbs"><img src="../../../assets/img/home/group_23.png"><span class="tt">&nbsp;&nbsp;    Access to Specialised Dentists</span></p>
+                                <p class="stbs"><img src="../../../assets/img/home/safe.png"><span class="tt">&nbsp;&nbsp;    Highest Safety measures</span></p>
 
                                 <a  href="javascript:void(0);" class="nav-link btn-grad kk" (click)="patientRouter('online', 'login-modal', '/web-panel/online-consultation?limit=10&skip=0', 'user')">BOOK AN APPOINTMENT </a>
 
