--- a/src/app/module/index/index.component.html
+++ b/src/app/module/index/index.component.html
@@ -117,7 +117,7 @@
                                     <div class="row">
                                         <div class="col-sm-4 col-xs-12">
 
-                                            <img class="img-fluid" src="assets/img/blog/blog-06.jpg" />
+                                            <img class="img-fluid" src="/assets/img/family-oral-health/child care.jpg" />
 
                                         </div>
 
@@ -141,7 +141,7 @@
                                     <div class="row">
                                         <div class="col-sm-4 col-xs-12">
 
-                                            <img class="img-fluid" src="assets/img/blog/blog-04.jpg" />
+                                            <img class="img-fluid" src="/assets/img/family-oral-health/men.jpg" />
 
                                         </div>
 
@@ -162,7 +162,7 @@
                                     <div class="row">
                                         <div class="col-sm-4 col-xs-12">
 
-                                            <img class="img-fluid" src="assets/img/blog/blog-09.jpg" />
+                                            <img class="img-fluid" src="/assets/img/family-oral-health/women..jpg" />
 
                                         </div>
 
@@ -183,7 +183,7 @@
                                     <div class="row">
                                         <div class="col-sm-4 col-xs-12">
 
-                                            <img class="img-fluid" src="assets/img/blog/blog-02.jpg" />
+                                            <img class="img-fluid" src="/assets/img/family-oral-health/senior-citizen.jpg" />
 
                                         </div>
 
