--- a/src/app/module/infobytes/infobytes.component.html
+++ b/src/app/module/infobytes/infobytes.component.html
@@ -250,7 +250,7 @@
                                 </div>
                                 <div class="col-sm-5 col-xs-6">
                                     <img class="imgw" src="/assets/img/infobyte/dentelroot.png">
-                                    <p class="itext"><i>Caption: Root canal is a treatment to repair and save a severely damaged or infected tooth, instead of removing it.</i></p>
+                                    <p class="itext"><i>Caption: Dental Implant is a fixed treatment option to replace one or multiple missing teeth.</i></p>
 
                                    
                                 </div>
@@ -289,7 +289,7 @@
                                 </div>
                                 <div class="col-sm-5 col-xs-6">
                                     <img class="imgw" src="/assets/img/infobyte/dentellips.png">
-                                    <p class="itext"><i>Caption: Root canal is a treatment to repair and save a severely damaged or infected tooth, instead of removing it.</i></p>
+                                    <p class="itext"><i>Caption: Dental braces are a way of straightening or moving your teeth, to improve how they look and how they work.</i></p>
                         
                         
                                 </div>
@@ -331,8 +331,7 @@
                             </div>
                             <div class="col-sm-5 col-xs-6">
                                 <img class="imgw" src="/assets/img/infobyte/dentalteeth.png">
-                                <p class="itext"><i>Caption: Root canal is a treatment to repair and save a severely damaged or infected
-                                        tooth, instead of removing it.</i></p>
+                                <p class="itext"><i>Caption: It is a dental restoration that covers the exposed surface of a tooth to strengthen it or improve its appearance.</i></p>
                     
                     
                             </div>
